<?xml version="1.0"?>
<package format="2">
  <name>project_robotics</name>
  <version>0.0.0</version>
  <description>The project_robotics package</description>

  <maintainer email="gabriele@todo.todo">gabriele</maintainer>

  <license>TODO</license>

  <depend>dynamic_reconfigure</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotics_hw1</build_depend>
  <build_export_depend>robotics_hw1</build_export_depend>
  <exec_depend>robotics_hw1</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>